# cmake-example

01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/src/: main.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/D-shared-library/: CmakeLists.txt
01-basic/E-install/: CMakeLists.txt
01-basic/E-install/include/installing/: Hello.h
01-basic/F-build-type/buid/: CMakeCache.txt  Makefile  cmake_examples_build_type  cmake_install.cmake
01-basic/G-compile-flags/: CMakeLists.txt  main
01-basic/H-third-party-library/: CMakeLists.txt  main.cpp
01-basic/H-third-party-library/spdlogproject/: CMakeLists.txt  main.cpp
01-basic/I-compiling-with-clang/: CMakeLists.txt  pre_test.sh
01-basic/J-building-with-ninja/: CMakeLists.txt
01-basic/K-imported-targets/: CMakeLists.txt
01-basic/L-cpp-standard/i-common-method/: CMakeLists.txt
01-basic/L-cpp-standard/ii-cxx-standard/: CMakeLists.txt
01-basic/L-cpp-standard/iii-compile-features/: CMakeLists.txt
02-sub-projects/A-basic/subbinary/: main.cpp
02-sub-projects/A-basic/sublibrary2/: CMakeLists.txt
03-code-generation/configure-files/: CMakeLists.txt  main.cpp  path.h.in
03-code-generation/protobuf/: CMakeLists.txt
04-static-analysis/clang-analyzer/: CMakeLists.txt
04-static-analysis/clang-analyzer/subproject2/: main2.cpp
04-static-analysis/clang-format/: CMakeLists.txt
04-static-analysis/clang-format/subproject1/: CMakeLists.txt
04-static-analysis/clang-format/subproject2/: CMakeLists.txt  main2.cpp
05-unit-testing/boost/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  unit_tests.cpp
05-unit-testing/catch2-vendored/: CMakeLists.txt  Reverse.h  unit_tests.cpp
05-unit-testing/google-test-download/: CMakeLists.txt  unit_tests.cpp
06-installer/deb/: CMakeLists.txt
